Fixed alignmnet.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,41 +1,23 @@
 /* Custom styles for the about section */
-.about-container {
-    display: flex !important;
-    text-align: left;
-  }
-  
-  .left-section {
-    position: relative;
-    display: flex !important;
-  }
-  
-  .banner-image {
-    max-width: 10em;
-  }
-  
-  .id-section {
-    left: 20px;
-    top: 100px;
-    z-index: 1;
-  }
-  
-  .id-section h2 {
+  .about-text h2 {
     margin: 0;
     font-size: 1.8rem;
     color: #ffffff;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
   }
   
-  .id-section p {
+  .about-text p {
     margin-top: 0.5rem;
     font-size: 1.2rem;
     color: #f0f0f0;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
   }
-  
-  .right-section {
-    flex: 2;
-    display: flex !important;
+
+  .featured-container img {
+    float:left;
+    display: block;
+    margin: 0 2em 2em 0;
+    shape-outside: url(https://github.com/dhruv0000/dhruv-archives/blob/main/static/animation/banner.gif?raw=true);
 }
 
 .info-box table {
